Closed Bug 1765769 Opened 3 years ago Closed 3 years ago

dom/media/mediasource/gtest/TestExtractAV1CodecDetails.cpp:9:10: fatal error: AOMDecoder.h: No such file or directory , when compiling with --disable-av1

Categories

(Core :: Audio/Video, defect)

Firefox 101
defect

Tracking

()

RESOLVED FIXED
101 Branch
Tracking Status
firefox-esr91 --- unaffected
firefox99 --- unaffected
firefox100 --- unaffected
firefox101 --- fixed

People

(Reporter: herrtimson, Assigned: Zaggy1024)

References

(Regression)

Details

(Keywords: regression)

Attachments

(2 files)

User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:91.0) Gecko/20100101 Firefox/91.0

Steps to reproduce:

I compiled firefox nightly from latest git snapshot, with --disable-av1

Actual results:

the compilation throws an error:

5:41.84 /var/tmp/portage/portage/www-client/firefox-101.0/work/firefox-101.0/dom/media/mediasource/gtest/TestExtractAV1CodecDetails.cpp:9:10: fatal error: AOMDecoder.h: No such file or directory

Expected results:

I expected the compile to work

the compressed build log is attached

Regressed by: 1757861

I tried to revert the patch from #1757861 with the current codebase, but the area of code is under heavy developement and hence I failed.

The Bugbug bot thinks this bug should belong to the 'Core::Audio/Video' component, and is moving the bug to that component. Please correct in case you think the bot is wrong.

Component: Untriaged → Audio/Video
Product: Firefox → Core

Set release status flags based on info from the regressing bug 1757861

:Zaggy1024, since you are the author of the regressor, bug 1757861, could you take a look?
For more information, please visit auto_nag documentation.

Flags: needinfo?(Zaggy1024)

This is my fault, I didn't think about the fact that the test would be called despite that flag. I'll throw together a patch for this quick.

Assignee: nobody → Zaggy1024
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Flags: needinfo?(Zaggy1024)
Pushed by zaggy1024@gmail.com: https://hg.mozilla.org/integration/autoland/rev/23d319ce1489 Fix compilation errors with --disable-av1 set. r=alwu
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 101 Branch
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: