Bug 1765769 - Fix compilation errors with --disable-av1 set. r=alwu

Differential Revision: https://phabricator.services.mozilla.com/D144343